tests/ui/codegen/evm-ir/validation/missing_stack_effect.evmir
//~? ERROR: EVM IR verification failed: block 0: instruction `op_0c` must declare an explicit stack effect
@module module

bb0:
  op_0c
  stop
